<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">دليلك البنكى</string>
	<string name="action_search">Search</string>
	<string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
	<string name="action_close">Close</string>
	<string name="action_print">Print</string>
	<string name="action_copy">Copy to clipboard</string>
	<string name="action_open_browser">Open in browser</string>
	<string name="shake_to_clear_cache">Shake Device to Delete Cache</string>
...
